--- a/FA.JustBlog.Web/Areas/Admin/Views/Post/Create.cshtml
+++ b/FA.JustBlog.Web/Areas/Admin/Views/Post/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model FA.JustBlog.Web.Areas.Admin.Models.PostCreateModel
+﻿@model FA.JustBlog.Web.Areas.Admin.Models.Post.PostCreateModel
 
 @{
     ViewData["Title"] = "Create Post";
