--- a/FA.JustBlog.Web/Areas/Admin/Views/Post/Edit.cshtml
+++ b/FA.JustBlog.Web/Areas/Admin/Views/Post/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model FA.JustBlog.Web.Areas.Admin.Models.PostViewModel
+﻿@model FA.JustBlog.Web.Areas.Admin.Models.Post.PostViewModel
 
 @{
     ViewData["Title"] = "Edit Post";
