--- a/FA.JustBlog.Web/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/FA.JustBlog.Web/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -105,19 +105,19 @@
             </li>
 
             <li class="nav-item">
-                <a class="nav-link" href="charts.html">
+                <a class="nav-link" asp-area="Admin" asp-controller="Category" asp-action="Index">
                     <i class="fas fa-fw fa-chart-area"></i>
                     <span>Manage Category</span>
                 </a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="tables.html">
+                <a class="nav-link" asp-area="Admin" asp-controller="Tag" asp-action="Index">
                     <i class="fas fa-fw fa-table"></i>
                     <span>Manage Tag</span>
                 </a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="tables.html">
+                <a class="nav-link" asp-area="Admin" asp-controller="Comment" asp-action="Index">
                     <i class="fas fa-fw fa-table"></i>
                     <span>Manage Comment</span>
                 </a>
