--- a/FA.JustBlog.Web/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/FA.JustBlog.Web/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -122,6 +122,12 @@
                     <span>Manage Comment</span>
                 </a>
             </li>
+            <li class="nav-item">
+                <a class="nav-link" asp-area="Admin" asp-controller="Account" asp-action="Index">
+                    <i class="fas fa-fw fa-table"></i>
+                    <span>Manage Account</span>
+                </a>
+            </li>
         </ul>
 
         <div id="content-wrapper">
