--- a/FA.JustBlog.Web/Views/Post/Index.cshtml
+++ b/FA.JustBlog.Web/Views/Post/Index.cshtml
@@ -29,6 +29,6 @@
         </p>
 
         <!-- Nội dung bài viết -->
-        <p>@post.PostContent</p>
+        <p>@Html.Raw(post.PostContent)</p>
     </div>
 }
