--- a/FA.JustBlog.Web/Areas/Admin/Views/Account/Index.cshtml
+++ b/FA.JustBlog.Web/Areas/Admin/Views/Account/Index.cshtml
@@ -1,8 +1,75 @@
-﻿
+﻿@model IEnumerable<FA.JustBlog.Web.Areas.Admin.Models.Account.UserWithRoles>
+
 @{
-    ViewData["Title"] = "Index";
-    Layout = "~/Areas/Admin/Views/Shared/_Layout.cshtml";
+    ViewData["Title"] = "User List";
 }
 
-<h1>Index</h1>
+<h2>@ViewData["Title"]</h2>
+@if (User.IsInRole("BlogOwner"))
+{
 
+    <a href="@Url.Action("Create")" class="btn btn-primary">Create New User</a>
+}
+<div class="input-group mx-auto mb-3" style="max-width: 400px;">
+    <input type="search" id="searchBox" class="form-control" placeholder="Search here..." aria-label="Search" aria-describedby="search-addon">
+</div>
+
+<table class="table myTable">
+    <thead>
+        <tr>
+            <th>User Name</th>
+            <th>Email</th>
+            <th>Roles</th>
+            <th>Actions</th>
+
+        </tr>
+    </thead>
+    <tbody>
+        @foreach (var userWithRoles in Model)
+        {
+            <tr>
+                <td>@userWithRoles.User.UserName</td>
+                <td>@userWithRoles.User.Email</td>
+                <td>
+                    @foreach (var role in userWithRoles.Roles)
+                    {
+                        <span>@role</span>
+                        <br />
+                    }
+                </td>
+
+
+                <td>
+                    @if (User.IsInRole("BlogOwner"))
+                    {
+                        <a asp-action="Edit" asp-route-id="@userWithRoles.User.Id" class="btn btn-warning">Edit</a>
+
+                        <!-- Delete Button - Confirm Deletion -->
+                        <form asp-action="DeleteUser" method="post" style="display:inline;">
+                            <input type="hidden" name="userId" value="@userWithRoles.User.Id" />
+                            <button type="submit" class="btn btn-danger" onclick="return confirm('Are you sure you want to delete this user?');">Delete</button>
+                        </form>
+                    }
+                </td>
+            </tr>
+        }
+    </tbody>
+</table>
+
+@section scripts {
+    <script>
+        $(document).ready(function () {
+            let options = {
+                numberPerPage: 10, // Số lượng dữ liệu trên mỗi trang
+                goBar: true, // Thanh nhập số trang
+                pageCounter: true // Hiển thị số trang
+            };
+
+            let filterOptions = {
+                el: '#searchBox' // Input box để tìm kiếm
+            };
+
+            paginate.init('.myTable', options, filterOptions);
+        });
+    </script>
+}
