--- a/FA.JustBlog.Web/Areas/Admin/Views/Comment/Index.cshtml
+++ b/FA.JustBlog.Web/Areas/Admin/Views/Comment/Index.cshtml
@@ -9,10 +9,13 @@
     <div class="row">
         <div class="col">
             <h1 class="mb-4 text-primary">Manage Comments</h1>
+            <div class="input-group mx-auto mb-3" style="max-width: 400px;">
+                <input type="search" id="searchBox" class="form-control" placeholder="Search here..." aria-label="Search" aria-describedby="search-addon">
+            </div>
 
             <div class="table-responsive">
                 <div class="table-container">
-                    <table class="table table-hover table-bordered text-center align-middle">
+                    <table class="table table-hover table-bordered text-center align-middle myTable">
                         <thead class="thead-dark">
                             <tr>
                                 <th class="fixed-column">#</th>
@@ -22,6 +25,7 @@
                                 <th>@Html.DisplayNameFor(model => model.CommentText)</th>
                                 <th>@Html.DisplayNameFor(model => model.CommentTime)</th>
                                 <th>@Html.DisplayNameFor(model => model.Post.Title)</th>
+                                
                                 <th class="actions-column">Actions</th>
                             </tr>
                         </thead>
@@ -39,10 +43,12 @@
                                     <td>@Html.DisplayFor(modelItem => item.Post.Title)</td>
                                     <td class="actions-column">
                                         <div class="btn-group" role="group">
-                                            
-                                            <a asp-action="Delete" asp-route-id="@item.Id" class="btn btn-danger btn-sm">
-                                                <i class="fas fa-trash"></i>
-                                            </a>
+                                            @if (User.IsInRole("BlogOwner"))
+                                            {
+                                                <a asp-action="Delete" asp-route-id="@item.Id" class="btn btn-danger btn-sm">
+                                                    <i class="fas fa-trash"></i>
+                                                </a>
+                                            }
                                         </div>
                                     </td>
                                 </tr>
@@ -101,3 +107,20 @@
         background-color: #f1f1f1;
     }
 </style>
+@section scripts {
+    <script>
+        $(document).ready(function () {
+            let options = {
+                numberPerPage: 10, // Số lượng dữ liệu trên mỗi trang
+                goBar: true, // Thanh nhập số trang
+                pageCounter: true // Hiển thị số trang
+            };
+
+            let filterOptions = {
+                el: '#searchBox' // Input box để tìm kiếm
+            };
+
+            paginate.init('.myTable', options, filterOptions);
+        });
+    </script>
+}
