--- a/FA.JustBlog.Web/Areas/Admin/Views/Tag/Index.cshtml
+++ b/FA.JustBlog.Web/Areas/Admin/Views/Tag/Index.cshtml
@@ -14,6 +14,10 @@
                 <a asp-action="Create" class="btn btn-success btn-lg">
                     <i class="fas fa-plus"></i> Create New
                 </a>
+                <div class="input-group w-50">
+                    
+                    <input type="search" id="searchBox" class="form-control" placeholder="Search here..." aria-label="Search" aria-describedby="search-addon">
+                </div>
                 <!-- Optional filter dropdown -->
                 @* <form method="get" class="form-inline">
                 <select name="filter" class="form-control form-control-lg" onchange="this.form.submit()">
@@ -37,7 +41,7 @@
 
             <div class="table-responsive">
                 <div class="table-container">
-                    <table class="table table-hover table-bordered text-center align-middle">
+                    <table class="table table-hover table-bordered text-center align-middle myTable">
                         <thead class="thead-dark">
                             <tr>
                                 <th class="fixed-column">#</th>
@@ -66,9 +70,12 @@
                                             <a asp-action="Details" asp-route-id="@item.Id" class="btn btn-info btn-sm">
                                                 <i class="fas fa-eye"></i>
                                             </a>
-                                            <a asp-action="Delete" asp-route-id="@item.Id" class="btn btn-danger btn-sm">
-                                                <i class="fas fa-trash"></i>
-                                            </a>
+                                            @if (User.IsInRole("BlogOwner"))
+                                            {
+                                                <a asp-action="Delete" asp-route-id="@item.Id" class="btn btn-danger btn-sm">
+                                                    <i class="fas fa-trash"></i>
+                                                </a>
+                                            }
                                         </div>
                                     </td>
                                 </tr>
@@ -127,3 +134,20 @@
         background-color: #f1f1f1;
     }
 </style>
+@section scripts {
+    <script>
+        $(document).ready(function () {
+            let options = {
+                numberPerPage: 5, // Số lượng dữ liệu trên mỗi trang
+                goBar: true, // Thanh nhập số trang
+                pageCounter: true // Hiển thị số trang
+            };
+
+            let filterOptions = {
+                el: '#searchBox' // Input box để tìm kiếm
+            };
+
+            paginate.init('.myTable', options, filterOptions);
+        });
+    </script>
+}
