--- a/FA.JustBlog.Web/Areas/Admin/Views/Post/Index.cshtml
+++ b/FA.JustBlog.Web/Areas/Admin/Views/Post/Index.cshtml
@@ -43,7 +43,7 @@
             <div class="table-responsive">
                 <div class="table-container">
                     <table class="table table-hover table-bordered text-center align-middle myTable">
-                        <thead class="thead-dark">
+                        <thead class="">
                             <tr>
                                 <th class="fixed-column">#</th>
                                 <th>@Html.DisplayNameFor(model => model.Title)</th>
