--- a/FA.JustBlog.Web/Areas/Admin/Views/Tag/Index.cshtml
+++ b/FA.JustBlog.Web/Areas/Admin/Views/Tag/Index.cshtml
@@ -42,7 +42,7 @@
             <div class="table-responsive">
                 <div class="table-container">
                     <table class="table table-hover table-bordered text-center align-middle myTable">
-                        <thead class="thead-dark">
+                        <thead class="">
                             <tr>
                                 <th class="fixed-column">#</th>
                                 <th>@Html.DisplayNameFor(model => model.Name)</th>
