--- a/FA.JustBlog.Web/Views/Shared/_Layout.cshtml
+++ b/FA.JustBlog.Web/Views/Shared/_Layout.cshtml
@@ -103,9 +103,12 @@
     <script src="~/vendor/jquery/jquery.min.js"></script>
     <script src="~/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdn.ckeditor.com/ckeditor5/36.0.1/classic/ckeditor.js"></script>
-
+    <script src="~/js/paginate.js"></script>
+    <script src="~/js/paginate.min.js"></script>
     <!-- Custom scripts for this template -->
     <script src="~/js/clean-blog.min.js"></script>
+    @RenderSection("scripts", required: false)
+
 
 </body>
 
