--- a/FA.JustBlog.Web/Views/Post/_PartialListPosts.cshtml
+++ b/FA.JustBlog.Web/Views/Post/_PartialListPosts.cshtml
@@ -12,8 +12,18 @@
     }
 
     .card-body {
+        display: flex;
+        flex-direction: column;
         flex-grow: 1;
+        justify-content: space-between;
     }
+
+    .card-footer {
+        display: flex;
+        justify-content: flex-end;
+    }
+
+
 </style>
 
 <h3>Most Viewed Posts</h3>
